[package]
description = "Try out iced by making a simple game of tic tac toe."
documentation = "https://docs.rs/iced-tic-tac-toe"
edition = "2021"
name = "iced-tic-tac-toe"
repository = "https://github.com/dhbradshaw/iced-tic-tac-toe"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rust ui library following the elm architecture pattern
iced = {version = "0.3.0", features = ["svg"]}
